<resources>
    <string name="app_name">bloodlogin</string>
    <string name="login">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="Register">Register</string>
    <string name="click_to_register">CLICK TO REGISTER</string>
    <string name="click_to_login">CLICK TO LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="hello_world">Hello World!</string>
    <string name="select_district">SELECT DISTRICT</string>

    <string-array name="locations">
        <item>Erode</item>
        <item>Tirupur</item>
        <item>Salem</item>
        <item>Perundurai</item>
        <item>Coimbatore</item>
    </string-array>
    <string-array name="district">
        <item>EROADE</item>
        <item>COIMBATURE</item>
        <item>TIRUPPUR</item>
    </string-array>
    <string-array name="districts">
        <item>EROADE</item>
        <item>COIMBATURE</item>
        <item>TIRUPPUR</item>
        <item>SALEM</item>
    </string-array>
    <string-array name="blood_types_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>



</resources>
